[package]
name = "kv_server"
version = "0.1.0"
authors = ["glitter"]
edition = "2018"

[lib]
name = "protos"
path = "src/protos/mod.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.1.16"
grpcio = "0.2.0"
protobuf = "1.4.1"
random = "0.12.2"

[build-dependencies]
protoc-grpcio = "0.3.1"
